--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+#Ignore the folders in "res"  except  layout
 ToDo/app/src/main/res/mipmap-anydpi-v26/
 ToDo/app/src/main/res/mipmap-hdpi/
 ToDo/app/src/main/res/mipmap-mdpi/
